---
source: orm-tests/tests/query_turbo.rs
expression: query.to_raw().build()
---
FOR $name IN ['Oyelowo', 'Oyedayo'] {
LET $new_bal = 5;

SELECT * FROM account WHERE balance = $new_bal;

LET $names = ['Oyelowo', 'Oyedayo'];

FOR $name IN $names {
LET $amount_to_use = 999;

CREATE ONLY balance SET id = { id: { String: 'balance1' }, tb: 'balance' }, amount = $amount_to_use;
};
};

FOR $name IN ['Oyelowo', 'Oyedayo'] {
LET $new_bal = 5;

SELECT * FROM account WHERE balance = $new_bal;
};
